send emails for ban and task assigment

--- a/templates/email/UserBan.html
+++ b/templates/email/UserBan.html
@@ -93,10 +93,12 @@
       <img src="https://i.ibb.co/92b7CXJ/forbidden.png" alt="Ban icon">
     </div>
     <div class="content">
-      <p>Hi {{userName}},</p>
-      <p class="no-margin">You are banned from our system.</p>
+      <p>Dear user,</p>
+      <p class="no-margin">You have been banned from our system.</p>
       <p class="no-margin">If you believe this was a mistake or would like to appeal the ban, please contact our support by clicking the button below.</p>
-      <a href="" class="button">Contact us</a>
+      <p class="no-margin">Please, be sure to provide basic info such as full name, phone number, date of receiving this email or any other information that you find relevant.</p>
+      <p class="no-margin">After we review your request, we will get back to you</p>
+      <a href="mailto:webmaster@programatori.stud.vts.su.ac.rs" class="button">Contact us</a>
     </div>
   </div>
 
