--- a/templates/email/UserTeam.html
+++ b/templates/email/UserTeam.html
@@ -94,9 +94,9 @@
     </div>
     <div class="content">
       <p>Hi {{userName}},</p>
-      <p class="no-margin">You are new member in the "#IME TIMA#" team. </p>
+      <p class="no-margin">You are new member in the "{{teamName}}" team. </p>
       <p class="no-margin">Please take a moment to connect with your new team members and review any tasks or goals associated with this new role.</p>
-      <a href="" class="button">Go to the dashboard</a>
+      <a href="http://localhost:3000" class="button">Go to the dashboard</a>
     </div>
   </div>
 
