--- a/templates/email/UserTodoTask.html
+++ b/templates/email/UserTodoTask.html
@@ -97,7 +97,7 @@
       <p>Hi {{userName}},</p>
       <p class="no-margin">Please review the task details, including the deadline and any relevant information, in our dashboard.</p>
       <p class="no-margin">If you have any questions or need further clarification, don't hesitate to reach out the employer.</p>
-      <a href="" class="button">Go to the dashboard</a>
+      <a href="{{dashboardLink}}" class="button">Go to the dashboard</a>
     </div>
   </div>
 
