added company logo

--- a/templates/reports/TaskReport.html
+++ b/templates/reports/TaskReport.html
@@ -93,7 +93,7 @@
 
 <header>
 <div class="logo">
-    <img src="https://placehold.co/400" alt="Company Logo" width="120" height="auto">
+    <img src="{{company_logo_url}}" alt="Company Logo" width="120" height="auto">
 </div>
 
 <div class="company-info">
